fixed: overflow-text

--- a/sass/blocks/_header.sass
+++ b/sass/blocks/_header.sass
@@ -55,6 +55,7 @@
     padding: 46px 67px 0 0
     display: flex
     flex-direction: column
+
   &__title
     margin: 0
     color: #FAAD13
@@ -91,6 +92,8 @@
     color: $text
     margin-top: 0
     margin-bottom: 56px
+    max-height: 150px
+    overflow: auto
 .button
   &__buy
     font-size: 16px
